@@ -16,6 +16,8 @@ Version 6.5.3 - not yet released
 * Mac OS X
   - fix crash on startup (#2607, #2667)
   - show missing serial ports, hide internal devices (#2668)
+* infoboxes
+  - fix rendering of thermal assistant aircraft symbol (#2702)
 
 Version 6.5.2 - 2013/03/15
 * user interface
